# bote

./: Cargo.toml  build.bote.rhai  flake.nix  result
.github/workflows/: devskim.yml  rust-clippy.yml  rust.yml
src/: commands.rs  config.rs  db.rs  error.rs  lib.rs  logging.rs  main.rs  veilid.rs
src/commands/: init.rs  install.rs  library.rs  pride.rs  publish.rs  search.rs  uninstall.rs  upgrade.rs
src/commands/install/: buildscript.rs
