[package]
name = "bote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.28"
git2 = "0.18.0"
home = "0.5.5"
humantime = "2.1.0"
log = "0.4.20"
rhai = "1.16.0"
thiserror = "1.0.48"
tokio = "1.32.0"
veilid-core = "0.2.1"
