[package]
name = "bote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bzip2-rs = "0.1.2"
clap = { version = "4.4.2", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.28"
git2 = "0.18.0"
home = "0.5.5"
humantime = "2.1.0"
log = "0.4.20"
regex = "1.9.5"
rhai = { version = "1.16.0", features = ["sync"] }
rhai-url = "0.0.4"
rust-lzma = "0.6.0"
shlex = "1.2.0"
tar = "0.4.40"
tempfile = "3.8.0"
thiserror = "1.0.48"
tokio = "1.32.0"
ureq = "2.7.1"
veilid-core = "0.2.1"
which = { version = "4.4.2", features = ["regex"] }
zip = "0.6.6"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
